--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
-/tmp
-/out-tsc
+/shufl-web/dist
+/shufl-web/tmp
+/shufl-web/out-tsc
 # Only exists if Bazel was run
-/bazel-out
+/shufl-web/bazel-out
 
 # dependencies
-/node_modules
+/shufl-web/node_modules
 
 # profiling files
-chrome-profiler-events*.json
-speed-measure-plugin*.json
+/shufl-webchrome-profiler-events*.json
+/shufl-webspeed-measure-plugin*.json
 
 # IDEs and editors
 /.idea
@@ -32,14 +32,14 @@ speed-measure-plugin*.json
 .history/*
 
 # misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
+/shufl-web/.sass-cache
+/shufl-web/connect.lock
+/shufl-web/coverage
+/shufl-web/libpeerconnection.log
+/shufl-web/npm-debug.log
+/shufl-web/yarn-error.log
+/shufl-web/testem.log
+/shufl-web/typings
 
 # System Files
 .DS_Store
