--- a/shufl-web/package.json
+++ b/shufl-web/package.json
@@ -1,9 +1,9 @@
 {
   "name": "shufl-web",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --ssl --ssl-key c:\\Certificates\\localhost.key --ssl-cert c:\\Certificates\\localhost.crt",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
