--- a/shufl-web/package.json
+++ b/shufl-web/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --ssl --ssl-key c:\\Certificates\\localhost.key --ssl-cert c:\\Certificates\\localhost.crt",
     "build": "ng build",
+    "build:prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
