--- a/shufl-web/package.json
+++ b/shufl-web/package.json
@@ -23,6 +23,7 @@
         "@angular/router": "~11.1.2",
         "@angular/service-worker": "~11.1.2",
         "rxjs": "~6.6.0",
+        "sha.js": "^2.4.11",
         "tslib": "^2.0.0",
         "zone.js": "~0.11.3"
     },
