--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -29,6 +29,8 @@ jobs:
     - name: Extract version
       id: extract_version
       uses: Saionaro/extract-package-version@v1.0.6
+      with:
+          path: './shufl-web/package.json'
           
     - name: Configure Version
       uses: microsoft/variable-substitution@v1
