--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -30,7 +30,7 @@ jobs:
       id: extract_version
       uses: Saionaro/extract-package-version@v1.0.6
       with:
-          path: 'shufl-web'
+          path: './shufl-web'
           
     - name: Configure Version
       uses: microsoft/variable-substitution@v1
