Fixed Master build

--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -37,11 +37,11 @@ jobs:
       with:
         files: './shufl-web/package.json'
       env:
-        version: ${{ steps.extract_version.outputs.version }}-CI-${GITHUB_RUN_NUMBER}
+        version: ${{ steps.extract_version.outputs.version }}-CI-$RUN_NUMBER
+        RUN_NUMBER: ${GITHUB_RUN_NUMBER}
         
     - name: Configure Environment Variables
       run: |
-        ls
         rm src/environments/environment.prod.ts
         echo $ENVIRONMENT_QA > src/environments/environment.prod.ts
       shell: bash
