--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -37,8 +37,7 @@ jobs:
       with:
         files: './shufl-web/package.json'
       env:
-        version: ${{ steps.extract_version.outputs.version }}-CI-$RUN_NUMBER
-        RUN_NUMBER: ${GITHUB_RUN_NUMBER}
+        version: ${{ steps.extract_version.outputs.version }}'-CI-'${GITHUB_RUN_NUMBER}
         
     - name: Configure Environment Variables
       run: |
