--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -3,6 +3,9 @@ name: Master - Build, Test, Pack & Publish
 on:
   push:
     branches: [ master ]
+    
+env:
+  RUN_NUMBER: ${ GITHUB_RUN_NUMBER }
 
 jobs:
   build:
@@ -37,7 +40,7 @@ jobs:
       with:
         files: './shufl-web/package.json'
       env:
-        version: ${{ steps.extract_version.outputs.version }}-CI-${{ GITHUB_RUN_NUMBER }}
+        version: ${{ steps.extract_version.outputs.version }}-CI-${{ RUN_NUMBER }}
         
     - name: Configure Environment Variables
       run: |
