--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -74,7 +74,7 @@ jobs:
       with:
         repoToken: '${{ secrets.GITHUB_TOKEN }}'
         firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_WEBENV_SHUFL }}'
-        target: 'qa'
+        target: qa
         entryPoint: ./shufl-web
         channelId: live
       env:
