--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -46,7 +46,8 @@ jobs:
       with:
         repoToken: '${{ secrets.GITHUB_TOKEN }}'
         firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_WEBENV_SHUFL }}'
-        projectId: webenv-shufl-qa
+        projectId: webenv-shufl
+        target: prod
         entryPoint: ./shufl-web
         channelId: live
       env:
