--- a/shufl-web/package.json
+++ b/shufl-web/package.json
@@ -4,6 +4,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve --ssl --ssl-key c:\\Certificates\\localhost.key --ssl-cert c:\\Certificates\\localhost.crt",
+        "start:host": "ng serve --ssl --ssl-key c:\\Certificates\\localhost.key --ssl-cert c:\\Certificates\\localhost.crt --host 192.168.1.106",
         "build": "ng build",
         "build:prod": "ng build --prod",
         "cypress": "concurrently \"ng serve\" \"cypress open\"",
